Authorization added and authRoutes set

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL ="mongodb+srv://antonythomas993:Antony@cluster0.cplf6ei.mongodb.net/?retryWrites=true&w=majority"
+JWT_SECRET = 'somesuperhardstring'
 PORT = 3001;
